// todo add more comment

syntax = "proto3";

package infoservice;

service CityManager {
  rpc FetchCities (FetchCitiesRequest) returns (FetchCitiesReply) {}
  rpc AddCities (AddCitiesRequest) returns (AddCitiesReply) {}
  rpc DelCities (DelCitiesRequest) returns (DelCitiesReply) {}
  rpc DelProvince (DelProvinceRequest) returns (DelProvinceReply) {}
}

message Province {
  int32 id = 1;
  string name = 2;
}

message City {
  int32 id = 1;
  string name = 2;
  Province province = 3;
}

message OptionResult {
  int32 status = 1;
  string msg = 2;

  // todo : add this to field, and use literal when constructing optionResult
//  int32 cityId = 3;
//  int32 provinceId = 4;
}

message FetchCitiesRequest {
  int32 provinceId = 1;
}

message FetchCitiesReply {
  repeated City cities = 1;
}

message AddCitiesRequest {
  repeated City cities = 1;
}

message AddCitiesReply {
  repeated OptionResult result = 1;
}

// batch delete city by city ids
message DelCitiesRequest {
  repeated int32 cityIds = 1;
}

message DelCitiesReply {
  // todo add deleted field to indicate the amount of items deleted successfully
  repeated OptionResult result = 1;
}

// batch delete city by province
message DelProvinceRequest {
  int32 provinceId = 1;
}

message DelProvinceReply {
  OptionResult result = 1;
}